# slider_RL

./: .gitignore  CMakeLists.txt  package.xml  play_model.py  test.csv  test_model.ipynb  test_model.py  train_model.py
enviroments/: SliderEnv.py
enviroments/meshes/: 2022_Foot.STL
enviroments/models/: flat_world.xml  flat_world_2022_feet.xml  flat_world_new_feet.xml  slider_2_0.xml  slider_2_0_2022_feet.xml  slider_2_0_new_feet.xml  slider_2_0_urdf.urdf
scripts/: slider_rl_controller.py
